--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <div id="features-section">
       <div class="feature">
         <div class="center">
-          <div class="image-container">
-            <img src="./resources/images/feature-1.png" />
+          <div class="image-container-features">
+            <img class="scaledown" src="./resources/images/feature-1.png" />
           </div>
           <div class="content">
             <h2>Advanced, automatic, instant</h2>
@@ -68,8 +68,8 @@
       </div>
       <div class="feature">
         <div class="center">
-          <div class="image-container">
-            <img src="./resources/images/feature-2.png" />
+          <div class="image-container-features">
+            <img class="scaledown" src="./resources/images/feature-2.png" />
           </div>
           <div class="content">
             <h2>Beautifully crafted inside-out</h2>
